--- a/trackEx/pom.xml
+++ b/trackEx/pom.xml
@@ -48,7 +48,12 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>6.1.1</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
